Added endpoint to get logged user info
